handel documentation for auth
